added icons to skills

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <img  class="aboutMe__picture--img" src="./Assets/profilePicture.jpg" alt="picture of Nicholas">
             <div class="aboutMe__Container--background">
             </div>
+            <div class="aboutMe__Container--background2">
+            </div>
                 <div class="aboutMe__detail">
                     <blockquote>
                         "You'll never know what you don't know if you do nothing."
@@ -42,14 +44,15 @@
                 <h2>Skills</h2>
             </div>
             <div class="skillList">
-                <div class="skill">| HTML 5 |</div>
+                <div class="skill"><img class="icon" src="./Assets/html_icon.svg" alt="| HTML 5 |"></div>
             
-                <div class="skill">| CSS 3 |</div>
-                <div class="skill">| GitHub |</div>
-                <div class="skill">| React |</div>
-                <div class="skill">| C# |</div>
-                <div class="skill">| .Net |</div>
-                <div class="skill">| SQL |</div>
+                <div class="skill"><img class="icon" src="./Assets/css_icon.svg" alt="| CSS 3 |"></div>
+                <div class="skill"><img class="icon" src="./Assets/git_icon.svg" alt="| GitHub |"></div>
+                <div class="skill"><img class="icon" src="./Assets/js_official_icon.svg" alt="| JavaScript |"></div>
+                <div class="skill"><img class="icon" src="./Assets/reactjs_icon.svg" alt="| React |"></div>
+                <div class="skill"><img class="icon" src="./Assets/csharp_icon.svg" alt="| C# |"></div>
+                <div class="skill"><img class="icon" src="./Assets/NET_Core_Logo.svg" alt="| .Net |"></div>
+                <div class="skill"><img class="icon" src="./Assets/sql_icon2.svg" alt="| SQL |"></div>
             </div>  
     </section>
     <section class="projects">
