styling of links

--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
             <div class="navBar__Name"><H1>Nicholas Douso</H1></div>
             <div>
                 <ul class="navLinks">
-                    <li class="navItem">About</li>
-                    <li class="navItem">Skills</li>
-                    <li class="navItem">Projects</li>
-                    <li class="navItem">Contact</li>
+                    <li class="navItem"><a href="#about">About</a></li>
+                    <li class="navItem"><a href="#skills">Skills</a></li>
+                    <li class="navItem"><a href="#projects">Projects</a></li>
+                    <li class="navItem"><a href="#contact">Contact</a></li>
                 </ul>
             </div>
             <div></div>
         </div>
     </nav>
-    <section class="aboutMe">
+    <section id="about" class="aboutMe">
         <div class="aboutMe__Container">
             <img  class="aboutMe__picture--img" src="./Assets/profilePicture.jpg" alt="picture of Nicholas">
             <div class="aboutMe__Container--background">
             </div>
             <div class="aboutMe__Container--background2">
             </div>
-                <div class="aboutMe__detail">
+                <div  class="aboutMe__detail">
                     <blockquote>
                         "You'll never know what you don't know if you do nothing."
                     </blockquote> 
@@ -39,7 +39,7 @@
                 </div>
         </div>
     </section>
-    <section class="skills">
+    <section  id="skills" class="skills">
             <div>
                 <h2>Skills</h2>
             </div>
@@ -55,14 +55,14 @@
                 <div class="skill"><img class="icon" src="./Assets/sql_icon2.svg" alt="| SQL |"></div>
             </div>  
     </section>
-    <section class="projects">
+    <section id="projects" class="projects">
         <div class="projects__Container">
             <div></div>
             <div></div>
             <div></div>
         </div>
     </section>
-    <section class="contact">
+    <section id="contact" class="contact">
         <div class="contact__Container">
             <div></div>
             <div></div>
