more styling and content

--- a/index.html
+++ b/index.html
@@ -55,12 +55,27 @@
             </div>  
     </section>
     <section id="projects" class="projects">
-        <div class="projects__Container">
+        <div class="projects__container">
             <div>
-                <h1>Projects</h1>
+                <h2>Projects</h2>
             </div>
-            <div>
-                
+            <div class="project__detail">
+                <div>
+                    <h3>GroceryList </h3>
+                </div>
+                <p>
+                    For those who enjoy cooking but are too busy to plan dinners for a week, GroceryList allows a user to quickly create a grocery list from their uploaded recipes. My intention was to make an app that was highly personal and easy to use.  
+                    <ul>
+                        <li>Built on React with data stored on a JSON server</li>
+                        <li>Styled using vanilla CSS</li>
+                        <li>Used JavaScript for dynamic elements</li>
+                        <li>Implementation of Fetch API to  avoid page rereshing for data manipulation</li>
+                    </ul>
+                </p>
+                <div class="screenshot">
+                    <img class="screenshot__browser" src="./Assets/browser-mockup-topbar.svg" alt="">
+                    <img class="project__screenshot" src="./Assets/GroceryListScreenShot.png" alt="GroceryList app Screenshot">
+                </div>
             </div>
             <div></div>
         </div>
@@ -73,17 +88,24 @@
             <div class="contact__links">
                 <div class="contact__link">
                     <div>
-                        <img class="icon" src="./Assets/github_original_logo_icon.svg" alt="GitHub">
+                        <a href="https://github.com/Ni236630">
+                            <img class="icon" src="./Assets/github_original_logo_icon.svg" alt="GitHub">
+                        </a>
                     </div>
                 </div>
                 <div class="contact__link">
                     <div>
-                        <img class="icon" src="./Assets/linkedin_logo_icon.svg" alt="Linkedin">
+                        <a href="https://www.linkedin.com/in/nicholas-douso
+                        ">
+                            <img class="icon" src="./Assets/linkedin_logo_icon.svg" alt="Linkedin">
+                        </a>
                     </div>
                 </div>
                 <div class="contact__link">
                     <div>
-                        <img  class="icon" src="./Assets/email_envelope_icon.svg" alt="email">
+                       <a href="mailto: nicholas.douso@gmail.com">
+                           <img  class="icon" src="./Assets/email_envelope_icon.svg" alt="email">
+                        </a>
                     </div>
                 </div>
             </div>
